manifests/app/namespace.yaml
# //////////////////////////////////////////////////////////////////////////
# NAMESPACE
# Holds the app and its data services
# //////////////////////////////////////////////////////////////////////////
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/part-of: app
