manifests/app/service.yaml
# //////////////////////////////////////////////////////////////////////////
# APP SERVICES
# Public Service on 80, headless mgmt Service on 8081
# //////////////////////////////////////////////////////////////////////////
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: app
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app-mgmt
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: app
    app.kubernetes.io/component: management
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: app
  ports:
    - name: mgmt
      port: 8081
      targetPort: mgmt
